# project_lens

./: .gitignore  CLAUDE.md  README.md  pixi.toml
.github/: copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  maintenance.yml  publish.yml  quality-monitoring.yml  release.yml  sonarqube.yml  update-pixi-lock-file.yml
backend/: README.md
backend/lens-io/: README.md  alembic.ini  pyproject.toml
backend/lens-io/alembic/: env.py  script.py.mako
backend/lens-io/alembic/versions/: 20241231_1500_001_initial_lineage_schema.py
backend/lens-io/scripts/: seed_example_lineage.py
backend/lens-io/src/lens/: __init__.py
backend/lens-io/src/lens/api/: __init__.py  main.py
backend/lens-io/src/lens/db/: __init__.py  session.py
backend/lens-io/src/lens/lineage/: __init__.py  models.py  repository.py  schemas.py
backend/lens-io/tests/: __init__.py  test_main.py
